--- a/wp-content/themes/cyrilbroult/sass/components/navigation/_navigation.scss
+++ b/wp-content/themes/cyrilbroult/sass/components/navigation/_navigation.scss
@@ -111,7 +111,8 @@ $filter-drop-shadow: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.5));
 	}
 }
 
-#secondary-menu {
+#secondary-menu,
+#menu-reseaux-sociaux-header {
 	display: flex;
 	gap: 1em;
 
