--- a/wp-content/themes/cyrilbroult/sass/abstracts/variables/_colors.scss
+++ b/wp-content/themes/cyrilbroult/sass/abstracts/variables/_colors.scss
@@ -19,5 +19,5 @@ $color__border-button-focus: #aaa #bbb #bbb;
 $color__border-input: #ccc;
 $color__border-abbr: #666;
 
-$white: #fefefe;
-$black: #0e0e0e;
+$white: #fffefe;
+$black: #212122;
