--- a/wp-content/themes/cyrilbroult/sass/components/navigation/_navigation.scss
+++ b/wp-content/themes/cyrilbroult/sass/components/navigation/_navigation.scss
@@ -254,5 +254,5 @@ body.is-desktop-menu-scrolled {
 }
 
 body:not(.home) #masthead.site-header {
-	backdrop-filter: blur(10px) brightness(0.2);
+	background: $black;
 }
