--- a/wp-content/themes/cyrilbroult/tailwind/custom/base.css
+++ b/wp-content/themes/cyrilbroult/tailwind/custom/base.css
@@ -12,6 +12,8 @@
  * editor.
 */
 
+@import 'swiper/swiper-bundle.min.css';
+
 :root {
 	--cb-body: 'Glacial Indifference';
 	--cb-bold: 'Glacial Bold';
@@ -23,7 +25,7 @@ body {
 	@apply bg-background text-foreground font-sans;
 }
 
-header + * {
+body:not(.home) header + * {
 	@media screen(md) {
 		@apply mt-32;
 	}
