[*]FO: slider, reassurance, presentation OK

--- a/wp-content/themes/cyrilbroult/tailwind/custom/base.css
+++ b/wp-content/themes/cyrilbroult/tailwind/custom/base.css
@@ -19,6 +19,7 @@
 	--cb-bold: 'Glacial Bold';
 	--cb-italic: 'Glacial Italic';
 	--cb-heading: 'Norwester';
+	--swiper-theme-color: white;
 }
 
 body {
