--- a/wp-content/themes/cyrilbroult/tailwind/custom/components/homepage.css
+++ b/wp-content/themes/cyrilbroult/tailwind/custom/components/homepage.css
@@ -1,9 +1,10 @@
 body.home {
-	& article {
+	& section:not(:first-child) {
+		@apply bg-white;
 	}
-
 	#home-slider {
-		@apply h-screen;
+		@apply h-screen bg-transparent;
+
 		.swiper:not(.swiper-initialized) {
 			.swiper-slide:first-child {
 				@apply relative z-10;
@@ -12,8 +13,9 @@ body.home {
 
 		.swiper {
 			@apply fixed bg-black top-0 right-0 bottom-0 left-0 -z-20;
+
 			.swiper-slide img {
-				@apply brightness-50 blur-sm;
+				@apply brightness-50 blur-sm h-screen w-screen object-cover;
 			}
 
 			.swiper-pagination,
@@ -62,6 +64,58 @@ body.home {
 
 				@media screen(md) {
 					@apply mx-0;
+				}
+			}
+		}
+	}
+
+	#home-reassurances {
+		@apply py-16 px-8 bg-transparent
+		text-white text-xl font-cb-bold uppercase;
+
+		&.swiper:not(.swiper-initialized) {
+			.swiper-slide {
+				@media screen(sm) {
+					@apply w-1/3;
+				}
+			}
+		}
+
+		.swiper-wrapper {
+			@apply items-end justify-center;
+		}
+
+		& p {
+			@apply text-center;
+		}
+		& img {
+			@apply mx-auto mb-4;
+		}
+	}
+
+	#home-presentation {
+		@apply py-24 px-8;
+
+		.presentation-block {
+			@apply flex flex-col gap-8 justify-center items-center;
+
+			&:not(:last-child) {
+				@apply mb-12;
+			}
+
+			@media screen(md) {
+				@apply flex-row gap-12;
+
+				&:nth-child(even) {
+					@apply flex-row-reverse;
+				}
+
+				.text {
+					@apply w-2/4 text-lg;
+				}
+
+				.image {
+					@apply w-1/4;
 				}
 			}
 		}
